[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/interface/OptionsScene/OptionsScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/interface/EscMenu/EscMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/interface/WorldEscTabContainer/WorldEscTabContainer.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="WorldEscTabContainer" type="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
tabs_visible = false
script = ExtResource( 3 )

[node name="EscMenu" parent="." instance=ExtResource( 2 )]

[node name="OptionsScene" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="pressed" from="EscMenu/VBoxContainer/ResumeGenericButton" to="." method="_on_ResumeGenericButton_pressed"]
[connection signal="pressed" from="EscMenu/VBoxContainer/OptionsGenericButton" to="." method="_on_OptionsGenericButton_pressed"]
[connection signal="pressed" from="OptionsScene/OptionsBackGenericButton" to="." method="_on_OptionsBackGenericButton_pressed"]

[editable path="EscMenu"]
[editable path="OptionsScene"]
